--- a/band.html
+++ b/band.html
@@ -165,7 +165,7 @@
             </div>
             <!-- End Contact Section -->
             <div class="map-section">
-                <img src="/assets/img/Footer/map.jpg" alt="">
+                <img src="assets/img/Footer/map.jpg" alt="">
             </div>
         </div>
             <!--Footer Section-->
